# bugtracker

./: manage.py  pyproject.toml
bugsapp/: admin.py  apps.py  forms.py  models.py  views.py
bugsapp/migrations/: 0001_initial.py
djangobugs/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  ticket_detail.html  user_detail.html
